force-app/main/default/objects/FNS_ConfigurationType__c/FNS_ConfigurationType__c.object-meta.xml
<CustomObject>
    <label>Configuration Type</label>
    <nameField>
        <label>Configuration Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>