force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_ConfigurationExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConfigurationExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Configuration External Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>