force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConfigurationId__c</fullName>
    <label>Configuration Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>