force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_ConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConfigurationType__c</fullName>
    <label>Configuration Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>