force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_ConfigurationValue__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConfigurationValue__c</fullName>
    <label>Configuration Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>