force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_Description__c.field-meta.xml
<CustomField>
    <fullName>FNS_Description__c</fullName>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>