force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_SystemId__c.field-meta.xml
<CustomField>
    <fullName>FNS_SystemId__c</fullName>
    <label>System Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>