force-app/main/default/objects/FNS_ConfigurationType__c/fields/FNS_SystemOrder__c.field-meta.xml
<CustomField>
    <fullName>FNS_SystemOrder__c</fullName>
    <label>System Order</label>
    <length>30</length>
    <type>Text</type>
</CustomField>