force-app/main/default/objects/FNS_ConfigurationType__c/recordTypes/FNS_ConfigurationType.recordType-meta.xml
<RecordType>
    <fullName>FNS_ConfigurationType</fullName>
    <active>true</active>
    <label>ConfigurationType</label>
</RecordType>