force-app/main/default/objects/FNS_ConfigurationType__c/recordTypes/FNS_TrackingItemStatus.recordType-meta.xml
<RecordType>
    <fullName>FNS_TrackingItemStatus</fullName>
    <active>true</active>
    <label>Tracking Item Status</label>
</RecordType>